--- a/PS2LS/ps2ls/packages.config
+++ b/PS2LS/ps2ls/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="OpenTK" version="3.3.2" targetFramework="net40" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net40" />
+  <package id="Zlib.Portable" version="1.11.0" targetFramework="net48" />
 </packages>
