Replaced DevIL with Pfim
all devil processes were replaced with their pfim counterpart
exclusion filters were removed for now supported image types
devil removed from project files

model exporting centralized to one static class
texture exporting reworked to closely match structure of model exporting class

--- a/PS2LS/ps2ls/packages.config
+++ b/PS2LS/ps2ls/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="OpenTK" version="3.3.2" targetFramework="net40" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net40" />
+  <package id="Pfim" version="0.10.1" targetFramework="net48" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net48" />
 </packages>
