Update UI for release
--updated imges,titles
--updated build settings

--- a/.gitignore
+++ b/.gitignore
@@ -43,9 +43,13 @@ Thumbs.db
 bin
 obj
 *.suo
+*.v2
 *.user
 _ReSharper.*
 
 # Directories #
 #################
 **/packages/**/*
+**/vs/**/*
+**/Publish/**/*
+**/Extracts/**/*
