--- a/PS2LS/ps2ls/packages.config
+++ b/PS2LS/ps2ls/packages.config
@@ -1,7 +1,19 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net48" />
   <package id="OpenTK" version="3.3.2" targetFramework="net40" />
   <package id="OpenTK.GLControl" version="3.1.0" targetFramework="net40" />
   <package id="Pfim" version="0.10.1" targetFramework="net48" />
+  <package id="SharpGLTF.Core" version="1.0.0-alpha0027" targetFramework="net48" />
+  <package id="SharpGLTF.Toolkit" version="1.0.0-alpha0027" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.4" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="5.0.0" targetFramework="net48" />
+  <package id="System.Text.Encodings.Web" version="5.0.1" targetFramework="net48" />
+  <package id="System.Text.Json" version="5.0.2" targetFramework="net48" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
   <package id="Zlib.Portable" version="1.11.0" targetFramework="net48" />
 </packages>
