--- a/PS2LS/ps2ls/packages.config
+++ b/PS2LS/ps2ls/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="AssimpNet" version="4.1.0" targetFramework="net48" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="5.0.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net48" />
   <package id="OpenTK" version="3.3.2" targetFramework="net40" />
